feat: 낮은 우선순위 개선 항목 전체 구현
- 과거 약속 자동 종료: AlarmScheduler 매시 정각 isDone=false 약속 자동 markDone
- CORS 도메인 제한: ALLOWED_ORIGINS 환경변수 지원 (기본 *.vercel.app, localhost, exp://)
- 주소 자동완성: 카카오 키워드 검색 API + AddressInput 컴포넌트 (RouteScreen/AppointmentScreen 적용)
- 여러 루트 관리 UI: 루트 목록 카드, 활성화/수정/삭제, PUT /routes/{id}/activate 엔드포인트
- 사운드 설정 실동작: Android 알림 채널 진동 제어, expo-brightness 기상 라이트 (포그라운드)
- 테스트: StringRedisTemplate MockBean 추가 (37개 전체 PASS)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>